# stash

./: Cargo.toml
backend/: Cargo.toml
backend/src/: main.rs
frontend/: .eslintrc.cjs  .prettierrc  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.scss  main.tsx  test-setup.ts
frontend/src/components/: ErrorMessage.tsx  StashItemForm.test.tsx  StashItemForm.tsx
frontend/src/i18n/: i18n.ts
frontend/src/services/: BackendProductService.test.ts  BackendProductService.ts  ProductDTO.ts  ProductService.ts  StashItemDTO.ts  fakeProductDTO.ts  fakeStashItemDTO.ts
frontend/src/utils/: createJSONFetcher.test.ts  createJSONFetcher.ts
src/: lib.rs  main.rs
src/application/services/: mod.rs  product_service.rs  stash_item_service.rs
src/application/use_cases/: mod.rs  save_product.rs  update_product_by_id.rs
src/application/usecases/: delete_product_by_id.rs  delete_stash_item_by_id.rs  get_product_by_id.rs  get_stash_item_by_id.rs  get_stash_item_by_product_id_and_expiry_date.rs  get_stash_items_by_product_id.rs  get_stash_items_expiring_before.rs  mod.rs  save_product.rs  save_stash_item.rs
src/domain/: brand.rs  entity.rs  mod.rs  quantity.rs  stash_item.rs  value_object.rs
src/domain/brand/: brand.rs  brand_error.rs  mod.rs
src/domain/entities/: product.rs  stash_item.rs
src/domain/errors/: brand_error.rs  mod.rs  product_id_error.rs  product_repository_error.rs  quantity_error.rs  stash_item_repository_error.rs
src/repositories/: mod.rs  product_repository.rs  stash_item_repository.rs
(+137 files in other folders)
