[package]
name = "rsstash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
getset = "0.1.2"
rusqlite = { version = "0.29.0", features = ["chrono", "bundled"] }
uuid = { version = "1.5.0", features = ["v4"] }
