[package]
name = "rsstash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
getset = "0.1"
rusqlite = { version = "0.30", features = ["chrono", "bundled"] }
uuid = { version = "1.5", features = ["v4"] }
actix-web = "4.4"

[dev-dependencies]
mockall = "0.11"
